blurry loading completed and working correctly

--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body{
     background-size: cover;
 }
 
+.blur {
+    display: flex;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    height: 100vh;
+    width: 100vw;
+    transition: all 1s;
+}
+
 .loading-container{
     justify-content: center;
     align-items: center;
@@ -18,6 +27,7 @@ body{
 
 #loading{
     color: white;
+    opacity: 1;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     font-size: 3em;
